[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/GFX/Items/firsbee.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scenes/Items/Frisbee.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.4999, 1.62505 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 1.99995 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 2.62495 )

[node name="Frisbee" type="KinematicBody2D"]
collision_layer = 256
collision_mask = 512
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 3.14159
shape = SubResource( 1 )

[node name="PlayerRigidBody" type="RigidBody2D" parent="."]
collision_layer = 0
mode = 1

[node name="PlayerCollision" type="CollisionShape2D" parent="PlayerRigidBody"]
shape = SubResource( 2 )
disabled = true
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="DragTrigger" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 3 )
one_way_collision = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
